singapore imgs + sticky fix

--- a/style.css
+++ b/style.css
@@ -58,8 +58,7 @@ body {
 .wrapper {
   margin: 0;
   padding: 0;
-  /* height: auto; */
-  height: 100vh;
+  height: auto;
   width: auto;
   background: var(--bg-grey);
 }
